# my2postgres

./: Cargo.toml  config-template.yml
actid/: Cargo.toml  README.md  run.ps1
actid/db/: Cargo.toml
actid/db/src/: lib.rs
actid/server/: Cargo.toml
actid/server/src/: main.rs
actid/src/: main.rs  pool.rs  task.rs
actid/worker0/: run.ps1
actid/worker1/: run.ps1
async/: Cargo.toml
async/src/: future_test.rs  main.rs  thread_test.rs
async/src/thread_test/: mod.rs
contact/: Cargo.toml  config-template.yml  pool
contact/src/: cfg.rs  main.rs  stream.rs  stream_time.rs  u7.rs
ecc/: Cargo.toml
ecc/src/: main.rs
fms/: fms.cpp  fms.sln  fms.vcxproj  fms.vcxproj.filters
fmsc/: db_cfg.h  fmsc.sln  fmsc.vcxproj  fmsc.vcxproj.filters  main.cpp  my.c  my.h
src/: cfg.rs  main.rs  my2pg.rs  stream.rs  test.rs
