[package]
name = "async"
version = "0.1.0"
authors = ["max <max@y.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    futures = { version = "*" }
    tokio = "*"
    serde_json = "*"
    serde = { version = "*", features = ["derive"] }
    reqwest = { version = "*", features = ["blocking"]}

[workspace]
