[package]
name = "server"
version = "0.1.0"
authors = ["max <y@y.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    rand = "*"
    actix-rt = "*"
    futures = "*"
    validator = "*"
    validator_derive = "*"
    env_logger = "*"
    serde = { version = "*", features = ["derive"] }
    serde_json = "1.0"
    #actix-web = { git = "https://github.com/actix/actix-web", features=["openssl"] }
    actix-web = { git = "https://github.com/actix/actix-web" }
    #actix-web = { path = "../../actix-web" }
[workspace] 
